--- a/css/test-8165c9.webflow.css
+++ b/css/test-8165c9.webflow.css
@@ -678,7 +678,7 @@
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
-  justify-content: flex-start;
+  justify-content: space-around;
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
